src/test/ui/generic-associated-types/parse/trait-path-segments.stderr
error: expected one of `!`, `(`, `+`, `,`, `::`, `:`, `<`, or `>`, found `=`
  --> $DIR/trait-path-segments.rs:9:36
   |
LL |     fn f1<'a>(arg : Box<dyn X<X::Y = u32>>) {}
   |                                  - ^ expected one of 8 possible tokens
   |                                  |
   |                                  maybe try to close unmatched angle bracket

error: expected one of `,`, `::`, `:`, or `>`, found `=`
  --> $DIR/trait-path-segments.rs:20:35
   |
LL |     impl<T : X<<Self as X>::Y<'a> = &'a u32>> Z for T {}
   |                                 - ^ expected one of `,`, `::`, `:`, or `>`
   |                                 |
   |                                 maybe try to close unmatched angle bracket

error: expected one of `!`, `+`, `,`, `::`, `:`, or `>`, found `=`
  --> $DIR/trait-path-segments.rs:31:25
   |
LL |     impl<T : X<X::Y<'a> = &'a u32>> Z for T {}
   |                       - ^ expected one of `!`, `+`, `,`, `::`, `:`, or `>`
   |                       |
   |                       maybe try to close unmatched angle bracket

warning: the feature `generic_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/trait-path-segments.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error: aborting due to 3 previous errors; 1 warning emitted

